# Automatyzacja-Thermores

./: .gitignore  .prettierignore  Justfile  README.md  Taskfile.yaml  gen.py  generate_employees_dict.py  pracownicy.json  przedmioty.xlsx  pyproject.toml  requirements.txt  style.css
.devcontainer/: devcontainer.json
.import/: doktoranci.json  pracownicy.csv  pracownicy.xlsx
aktualności/: InlineStyle.py  Taskfile.yaml  inline_style.py
badania/: badania.yaml
bloki/: animacja-dydaktyka.md  animacja-glowna.md  settings.json
clojure/: .cljfmt.edn  deps.edn  doktoranci.csv  doktoranci.json  parse.nu  printer.clj  template.edn
dydaktyka/: Taskfile.yaml  gen.py  generate_table.py  mathematical-modelling.md  obliczenia-numeryczne.md.j2  pakiety-obliczeniowe.md  pakiety-obliczeniowe.md.j2  podstawy-termodynamiki.md  przedmioty.xlsx  przenoszenie-ciepla.md  sptfp.md.j2  szablon.md.j2  szablon_en.md.j2  szablon_pl.md.j2  teoria-maszyn-cieplnych.md  termodynamika.md  wymiana-ciepla-i-wymienniki.md  wzpcp.md  wzpcp.md.j2
katedra/: Taskfile.yaml  charakterystyka-grupy.md  index.md  laboratoria.md  laboratoria.md.j2  wladze.md  wladze.md.j2
pracownicy/: Dodaj.py  Thermores.side  index.md  pracownicy.xlsx  test_dodaj.py
scripts/: map.js
site/: Taskfile.yaml  kontakt.md
styles/: main.css  style.css
